# EcomSphere

./: .gitignore  .pre-commit-config.yaml  Makefile
docker-compose/: app.yaml  storages.yaml
user-service/: Dockerfile  pyproject.toml
user_service/: .env.example  Dockerfile  alembic.ini  pyproject.toml
user_service/application/: main.py
user_service/docker-compose/: app.yaml
user_service/domain/entities/: base.py  user.py
user_service/domain/events/: base.py  user.py
user_service/domain/exceptions/: base.py
user_service/domain/exceptions/value_objects/: address.py  email.py  password.py  role.py  username.py
user_service/domain/value_objects/: address.py  base.py  email.py  password.py  username.py
user_service/infra/db/: config.py  database.py  main.py
user_service/infra/db/alembic/: env.py
user_service/infra/db/models/: __init__.py  base.py  user.py
user_service/logic/: containers.py
user_service/tests/domain/entities/: conftest.py  test_change_email.py  test_change_password.py  test_change_username.py  test_delete_user.py  test_user_create_entity.py
user_service/tests/domain/events/: conftest.py  test_user_created_event.py  test_user_deleted_event.py  test_user_updated_event.py
